--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css" />
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
   </head>
   <body>
-    
-  <div class="demo">
-
-  </div>
+    <div class="demo"></div>
 
     <script src="js/jquery.js"></script>
-    <script src="js/stackValidParentheses.js"></script>
+    <script src="js/stack/stackValidParentheses.js"></script>
+    <script src="js/stack/MinimumStack.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
