--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/stack/stackValidParentheses.js"></script>
     <script src="js/stack/MinimumStack.js"></script>
+    <script src="js/stack/EvaluateReversePolishNotation.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
