examples for design pattern

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="js/stack/stackValidParentheses.js"></script>
     <script src="js/stack/MinimumStack.js"></script>
     <script src="js/stack/EvaluateReversePolishNotation.js"></script>
+        <script src="js/designBattern/creatintiolBattern/factoryBattern.js"></script>
+
     <script src="js/main.js"></script>
   </body>
 </html>
